Fixes #7 Switches use of `PreserveDanglingCloseParenthesis ` preference with `DanglingCloseParenthesis`

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ src_managed/
 project/boot/
 project/plugins/project/
 
+.idea/
+build
+.gradle
+
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
